--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,15 @@
 body{
     background-color: rgb(61, 160, 160);
 }
+#ftr1{
+    background-color: rgb(38, 36, 36);
+    color: aliceblue;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* float: bottom; */
+    margin-top: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+#footerdiv{
+    background-color: rgb(26, 21, 29);
+}
