--- a/homepage.css
+++ b/homepage.css
@@ -1,99 +1,67 @@
-#nav-bar{
-    border: 5px solid black;
-    padding-bottom: 20px;
-    border-radius: 20px;
-    /* margin-left: 70px; */
-    /* margin-top: -60px; */
-}
-/* label > div{
-
-} */
-#logo{
-    margin-left: 10px;
-    /* margin-top: 20px; */
-}
-#logo-png{
-    height: 100px;
-    width: 100px;
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-#nav-bar-options{
-    margin-left: 530px;
-    margin-top: -75px;
-    margin-bottom: 100px;
-    /* border: 5px solid black; */
-    /* margin-left: 70px;  */
-    /* margin-top: -60px; */
+#logo-and-explore{
+    display: inline;
 }
 .explore{
-    margin-left: 0px;
-    margin-bottom: 5px;
-    /* margin-bottom: 190px; */
-    /* padding-top: -30px; */
-    
-}  
-#log-in{
-    margin-left: -30px;
-    margin-top: -125px;
+    display: inline;
+    /* float: inline-start; */
 }
-/* #logo-and-explore{
-    margin-top: -20px;
-} */
-#sign-up{
-    margin-left: 1850px;
-    margin-top: -28px;
+#logo{
+    display: inline;
+    float: left;
+}
+#logo-png{
+    height: 50px;
+    width: 50px;
+}
+#nav-bar-options{
+    border: 5px solid black;
+    display: inline-flex;
+    justify-content: space-around;
+    width: 60%;
 }
 .nav-bar-class{
     font-size: x-large;
+    /* display: inline; */
+}
+.log-and-sign{
+    display: inline-flex;
+    float: right;
+    justify-content:space-around;
+    width: 200px;
 }
 #sliding-pix{
     border: 5px solid black;
+    height: 400px;
     border-radius: 20px;
-    padding-bottom: 400px;
-    /* margin-left: 250px; */
 }
 #content{
-    margin-top: 10px;
-    margin-bottom: 20px;
+    border: 5px solid blue;
+    display: inline-flex;
+    width: 100%;
 }
 #option-bar{
-    /* margin-right: 1400px; */
-    width: 230px;
-    margin-left: 0px;
-    height: 600px;
-    /* margin-top: 1000px ; */
-    border: 5px solid rgb(2, 36, 2);
-    /* flex-direction: column-reverse; */
+    /* display: inline-flex; */
+    border: 5px solid green;
+    width: 25%;
 }
 #all-services{
-    margin-top: -610px;
-    border: 5px solid darkblue;
-    padding: 10px;
-    margin-left: 250px;
+    /* display: inline-flex; */
+    border: 5px solid red;
+    width: 75%;
 }
-
-/* .services span{
-    width: %;
-} */
-#footer-div{
-    background-color: rgb(14, 49, 66);
-    font-size: 1.5rem;
-    /* margin-top: 10px; */
-    margin-bottom: 0%;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    text-align: center;
-    color: white
+#first-row{
+    display: inline-flex;
+    justify-content: space-evenly;
 }
-#rights, #trademarks, #footer-options{
-    background-color: darkslategray;
-    margin-left: 50px;
-    margin-right: 50px
+#second-row{
+    display: inline-flex;
+    justify-content: space-evenly;
 }
-body{
-    background-color: aqua;
+.services{
+    border: 5px solid black;
+    width: 25%;
 }
-#first-span{
-    margin-top: 8000px;
+img{
+    height: 250px;
+    width: 300px;
 }
