--- a/select.css
+++ b/select.css
@@ -1,6 +1,8 @@
 body{
-    height: 540vh;
-    width: 100vw;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
 }
 a:link{
     text-decoration: none;
