--- a/style.css
+++ b/style.css
@@ -833,3 +833,62 @@ body {
   font-size: 20px;
   font-family: "Baloo 2", sans-serif;
 }
+.background-antique{
+  background-color: antiquewhite;
+  height: 90vh;
+  position: relative;
+  bottom: 5vh;
+}
+.select-header h1{
+  text-align: center;
+  font-size: 55px;
+  background-color: antiquewhite;
+  padding-top: 5vh;
+}
+.select-main{
+  margin-left: 9.5vw;
+  margin-right: 9.5vw;
+  padding-bottom: 1.5vh;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  /* background-color: #f0f0f0; */
+  gap: 7.5vw;
+}
+.select-main img{
+  height: 45vh;
+  width: 30vw;
+  border-radius: 30px;
+}
+.select-main h2{
+  text-align: center;
+  font-weight: 600;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 35px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-top: 10px;
+  border: 5px solid rgb(95, 202, 95);
+  background-color: rgb(210, 241, 210);
+  width: 260px;
+  border-radius: 30px;
+}
+.left-select img{
+  border: 10px solid rgb(23, 79, 79);
+}
+.right-select img{
+  border: 10px solid rgb(23,79,79);
+}
+#left-select-img{
+  cursor: pointer;
+}
+#right-select-img{
+  cursor: pointer;
+}
+.select-main > div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
