take-survey-page

--- a/style.css
+++ b/style.css
@@ -894,3 +894,256 @@ body {
   align-items: center;
   justify-content: center;
 }
+.take-or-give-survey-nav{
+  display: flex;
+  justify-content: space-between;
+  padding-left: 1.5vw;
+  padding-right: 1.5vw;
+  background-color: #092224;
+  color: rgb(248, 238, 220);
+}
+.take-or-give-survey-nav img{
+  height: 22.5px;
+  width: 22.5px;
+  cursor: pointer;
+  fill: white;
+}
+.take-or-give-survey-nav  > div{
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  gap: 20px;
+}
+.upgrade-icon{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.design-nav{
+  display: flex;
+  background-color: rgb(228, 228, 228);
+  padding-left: 1.5vw;
+  padding-right: 1.5vw;
+  justify-content: space-between;
+  height: 6.5vh;
+  align-items: center;
+  font-size: 17.5px;
+}
+.design-nav > div{
+  display: flex;
+  gap: 40px;
+  align-items: center;
+  font-size: 15px;
+  cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(10, 10, 57);
+}
+.design-nav > div > div {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  gap:10px;
+}
+.design-nav img{
+  height: 22.5px;
+  width: 22.5px;
+}
+.take-survey-main{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  height: 85vh;
+  margin-bottom: 15vh;
+}
+.nav-settings{
+  display: flex;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 1.5vw;
+  padding-top: 1.5vh;
+  gap: 10px;
+}
+.nav-settings img{
+  height: 20px;
+  width: 20px;
+}
+.nav-settings > div{
+  background-color: rgba(209, 204, 204, 0.432);
+  color: rgba(47, 45, 45, 0.632);
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 1vh;
+  padding-top: 1vh;
+  font-weight: 700;
+  display: flex;
+  gap: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.nav-settings > div> span{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+#designer-visual{
+  color: rgb(11, 11, 60);
+  background-color: rgb(197, 190, 190);
+}
+.take-survey-left{
+  margin-left: 2.5vw;
+  padding-right: 1vw;
+  padding-left: 1vw;
+  padding-top: 2.5vh;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  border: 5px solid rgb(72, 71, 71);
+  margin-top: 2.5vh;
+  background-color: #c6e9e0;
+}
+.take-survey-questions-heading{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-family: "Baloo 2", sans-serif;
+  font-size: 18px;
+  position: relative;
+  bottom: 10px;
+}
+#question-types{
+  color: rgb(13, 13, 47);
+}
+#question-bank{
+  background-color: rgb(34, 34, 34);
+  color: rgba(198, 192, 192, 1);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-left: 10px;
+}
+#black-line-take{
+  position: relative;
+  bottom: 20px;
+}
+.questions-options{
+  display: flex;
+  align-items: center; 
+  gap:20px ;
+  position: relative;
+  bottom: 30px;
+  font-size: 18px;
+  font-family: "Baloo 2", sans-serif;
+}
+.questions-options img{
+  height: 20px;
+}
+.take-survey-options{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 10px;
+  column-gap: 10px;
+  margin-bottom: 10px;
+  position: relative;
+  bottom: 30px;
+}
+.take-survey-options > div{
+  border: 3px solid rgb(66, 66, 66);
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  align-items: center;
+  height: 90px;
+  gap: 10px;
+  justify-content: center;
+  cursor: pointer;
+}
+.take-survey-options img{
+  width: 25px;
+  height: 25px;
+}
+.take-survey-right{
+  margin-right: 1.5vw;
+  border: 3px solid gray;
+  margin-left: 1.5vw;
+  margin-top: 2.5vh;
+}
+.right-top-options{
+  padding-left: 1vw;
+  padding-right: 1vw;
+  padding-top: 1.5vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 18px;
+}
+.right-top-options > div{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+.right-top-options img{
+  width: 22.5px;
+  height: 22.5px;
+  margin-top: 1vh;
+  background-color: rgb(197, 193, 193);
+  padding: 10px;
+  border-radius: 50px;
+}
+.right-top-options #caret-down{
+  height: 15px;
+  width: 20px;
+}
+.take-survey-right-main{
+  border: 3px solid black;
+  display: grid;
+  height: 65vh;
+  grid-template-rows: 1fr 3fr 1fr;
+  margin-left: 1.5vw;
+  margin-right: 1.5vw;
+  margin-top: 5vh;
+  background-color: rgb(177, 212, 214);
+}
+.take-survey-right-main img{
+  height: 20px;
+  width: 20px;
+}
+.take-survey-right-main > div{
+  margin-left: 1.5vw;
+  margin-top: 2.5vh;
+}
+.take-survey-header > div{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+.take-survey-header h3{
+  color: rgb(12, 32, 61);
+  font-size: 20px;
+}
+.take-survey-ready{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.take-survey-ready h4{
+  font-size: 40px;
+  color: rgb(43, 44, 47);
+}
+.take-survey-ready p{
+  position: relative;
+  bottom: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(44, 44, 44);
+}
+.take-survey-footer{
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
