--- a/style.css
+++ b/style.css
@@ -998,7 +998,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 25px;
-  border: 5px solid rgb(72, 71, 71);
+  border:2px solid rgb(72, 71, 71);
   border-radius: 10px;
   margin-top: 2.5vh;
   background-color: #daefea;
@@ -1050,7 +1050,7 @@ body {
   bottom: 30px;
 }
 .take-survey-options > div{
-  border: 3px solid rgb(66, 66, 66);
+  border: 1px solid rgb(66, 66, 66);
   display: flex;
   color: rgb(47, 44, 44);
   flex-direction: column;
@@ -1102,7 +1102,7 @@ body {
   width: 20px;
 }
 .take-survey-right-main{
-  border: 3px solid rgb(79, 78, 78);
+  border: 2px solid rgb(79, 78, 78);
   border-radius: 7.5px;
   display: grid;
   height: 65vh;
@@ -1250,4 +1250,14 @@ body {
 .about-last p{
   position: relative;
   bottom: 45px;
+}
+.give-survey-main{
+  display: flex;
+  flex-direction: column;
+}
+.give-survey-top{
+  display: grid;
+  background-color: #0d464a;
+  color: white;
+  grid-template-columns: 7fr 3fr;
 }
