--- a/give-survey.css
+++ b/give-survey.css
@@ -1,6 +1,9 @@
 body{
     margin: 0;
     padding: 0;
-    height: 150vh;
     width: 100%;
+    height: 200vh;
 }
+.logo a {
+     color: inherit;
+} 
